# pyFlowRules

./: .coverage  .editorconfig  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements-examples.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  version.yml
example/: main.py
flow/: rulesEngine.py
tests/: test_rulesEngine.py  test_version.py
