[metadata]
name = flow-rulesengine
version = 0.1.0
author = Pete Robinson
author_email = pete@madhippy.com
description = A simple rules engine package for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/p1971/pyFlowRules
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pytest>=7.0.0
python_requires = >=3.7